--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "fcc-learn-npm-package-json",
 	"author": "Mahmud Yunus",
 	"description": "A project that does something awesome",
+	"keywords": ["freecodecamp", "exercise node", "mahmud yunus"],
 	"engines": {
 		"node": "14.x"
 	},
