--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"author": "Mahmud Yunus",
 	"description": "A project that does something awesome",
 	"keywords": ["freecodecamp", "exercise node", "mahmud yunus"],
+	"license": "MIT",		
 	"engines": {
 		"node": "14.x"
 	},
